was/deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: springboot-app-rollout
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: 853963783084.dkr.ecr.ap-northeast-2.amazonaws.com/backend:87
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
  strategy:
    canary:
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 25
      - pause: {duration: 10s}
      - setWeight: 50
      - pause: {duration: 10s}
